Modifica Index di Home

--- a/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
+++ b/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
@@ -25,6 +25,17 @@
 
         <h1 class="my-3">Pizzas</h1>
 
+
+        <div class="row js_no_post text-center d-none">
+            <div class="col-12">
+                <h3>Non hai inserito alcuna pizza</h3>
+            </div>
+        </div>
+        <div class="row js_post_table d-none">
+            <!-- qui verranno mostrati gli elementi -->
+        </div>
+
+
      <!--   <table class="table">
 
             <thead>
