--- a/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
+++ b/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
@@ -12,29 +12,37 @@
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar bg-light py-3">
+   <!-- <nav class="navbar bg-light py-3">
 
             <div class="container-fluid bg-danger">
             <h3 class="text-white my-3">Da Marione</h3>
             <div class="arrow-down"></div>
             </div>
         </nav>
-
+        
 
     <div class="container">
 
         <h1 class="my-3">Pizzas</h1>
+    </div> -->
 
-
-        <div class="row js_no_post text-center d-none">
-            <div class="col-12">
-                <h3>Non hai inserito alcuna pizza</h3>
+   <div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="d-flex justify-content-between align-items-center">
+                <h1 class="mt-3 mb-3">Lista posts</h1>
             </div>
         </div>
-        <div class="row js_post_table d-none">
-            <!-- qui verranno mostrati gli elementi -->
+    </div>
+    <div class="row js_no_post text-center d-none">
+        <div class="col-12">
+            <h3>Non hai inserito alcun post</h3>
         </div>
-
+    </div>
+    <div class="row js_post_table d-none">
+        <!-- qui verranno mostrati gli elementi -->
+    </div>
+</div>
 
      <!--   <table class="table">
 
