--- a/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
+++ b/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
@@ -12,15 +12,15 @@
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-   <!-- <nav class="navbar bg-light py-3">
+    <nav class="navbar bg-light py-3">
 
             <div class="container-fluid bg-danger">
             <h3 class="text-white my-3">Da Marione</h3>
             <div class="arrow-down"></div>
             </div>
         </nav>
-        
 
+    <!--
     <div class="container">
 
         <h1 class="my-3">Pizzas</h1>
@@ -30,19 +30,71 @@
     <div class="row">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
-                <h1 class="mt-3 mb-3">Lista posts</h1>
+                <h1 class="mt-3 mb-3">Lista pizze</h1>
             </div>
         </div>
     </div>
-    <div class="row js_no_post text-center d-none">
+    <div class="row js_no_pizza text-center d-none">
         <div class="col-12">
-            <h3>Non hai inserito alcun post</h3>
+            <h3>Non hai inserito alcuna pizza</h3>
         </div>
     </div>
-    <div class="row js_post_table d-none">
+    <div class="row js_pizza_table d-none">
         <!-- qui verranno mostrati gli elementi -->
     </div>
 </div>
+
+@section Scripts {
+
+    <script type="text/javascript">
+
+        loadList();
+
+        function loadList() {
+
+            axios.get('/api/pizzawebapi').then((res) => {
+
+                console.log('risultato ok', res);
+
+                if (res.data.length == 0) {
+
+                    document.querySelector('.js_no_pizza').classList.remove('d-none');
+                    document.querySelector('.js_pizza_table').classList.add('d-none');
+
+                } else {
+
+                    document.querySelector('.js_pizza_table').classList.remove('d-none');
+                    document.querySelector('.js_no_pizza').classList.add('d-none');
+
+                    document.querySelector('.js_pizza_table').innerHTML = '';
+
+                    res.data.forEach(pizza => {
+
+                        console.log('pizza', pizza);
+
+                        document.querySelector('.js_pizza_table').innerHTML +=
+                            `
+                                   <div class="col-12 col-md-4 p-2">
+                                    <div class="card pizza h-100">
+                                      <img src="${pizza.image}" class="card-img-top" alt="...">
+                                      <div class="card-body">
+                                        <h5 class="card-title">${pizza.name}</h5>
+                                        <p class="card-text">${pizza.description}</p>
+                                      </div>
+                                    </div>
+                                </div>
+                             `;
+                    });
+                }
+            }).catch((error)=>{
+                console.log(error);
+            });
+
+        }
+
+    </script>
+
+    }
 
      <!--   <table class="table">
 
@@ -82,7 +134,6 @@
             </tbody>
 
         </table> -->
-    </div> 
 
 
 
