--- a/LaMiaPizzeriaCategoriaETagELogin/Views/Shared/_LayoutPersonal.cshtml
+++ b/LaMiaPizzeriaCategoriaETagELogin/Views/Shared/_LayoutPersonal.cshtml
@@ -62,12 +62,20 @@
         <div class="container">
             &copy; 2022 - NetCore_01 - <a asp-area="" asp-controller="Post" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+     </footer>-->
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false) -->
+        <script src="~/js/site.js" asp-append-version="true"></script>
 
+    <!-- Optional JavaScript; choose one of the two! -->
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <!-- Importazione di AXIOS nel vostro layout per ogni pagina, in modo che se abbiamo bisogno di una chiamata a delle API possiamo utilizzare questo strumento per fare chiamate in GET; POST; PUT; DELETE tramite JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
+
+    @await RenderSectionAsync("Scripts", required: false)
+    
 
 </body>
 </html>
