Refactoring con uso di ID e introduzione di funzione search in corso

--- a/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
+++ b/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    Layout = null;
+﻿
+@{
+    Layout = "_LayoutPersonal";
 }
 
 <!doctype html>
@@ -34,21 +35,47 @@
             </div>
         </div>
     </div>
-    <div class="row js_no_pizza text-center d-none">
+
+        <div id="spinner-loader" class="d-flex justify-content-center">
+            <div class="spinner-border mt-5" role="status">
+                <img style="width:50px;" src="https://1.bp.blogspot.com/-CAroinPVLPw/X9GYFpVZ4DI/AAAAAAABcs8/EVBG1MUGq9wj56i-HKNzi5JHpDaERVlxwCNcBGAsYHQ/s509/food_pizza_whole.png" class="sr-only" />
+            </div>
+        </div>
+
+
+        <!--REFACTORING CON UTILIZZO DI ID-->
+   <!-- <div class="row js_no_pizza text-center d-none">
         <div class="col-12">
             <h3>Non hai inserito alcuna pizza</h3>
         </div>
     </div>
     <div class="row js_pizza_table d-none">
-        <!-- qui verranno mostrati gli elementi -->
-    </div>
+         qui verranno mostrati gli elementi 
+    </div> -->
+
+
+
+
+        <div id="container_no_pizzas" class="row text-center d-none">
+              <div class="col-12">
+                  <h3>Non hai inserito alcuna pizza</h3>
+              </div>
+          </div>
+          <div id="container_pizzas"class="row d-none">
+               <!--qui verranno mostrati gli elementi -->
+          </div>
+
+
 </div>
 
 @section Scripts {
 
+    <!-- REFACTORING CON FUNZIONE DI RESEARCH E UTILIZZO DI ID-->
+    <!--
     <script type="text/javascript">
 
         loadList();
+
 
         function loadList() {
 
@@ -91,51 +118,76 @@
             });
 
         }
+        -->
 
+        <script type="text/javascript">
+
+            loadPizzas();
+
+            document.getElementById('input_search').addEventListener('keyup', searchPizzas);
+
+            function searchPizzas() {
+                let stringOfResearch = document.getElementById('input_search').value;
+                loadArticoli(stringOfResearch;
+            }
+
+            function loadPizzas(searchString) {
+
+                axios.get('/api/pizzas', {
+                    params: {
+                        search: searchString
+                    }
+                }
+                ).then((res) => {
+
+                    console.log('risultato ok');
+                    console.log(res);
+
+                    debugger;
+
+                    if (res.data.length > 0) {
+                        document.getElementById('container_pizzas').classList.remove('d-none');
+                        document.getElementById('container_no_pizzas').classList.add('d-none');
+
+                        document.getElementById('container_pizzas').innerHTML = '';
+
+                        res.data.forEach(articolo => {
+
+                            console.log('pizza: ', pizza);
+
+                            document.getElementById('container_pizzas').innerHTML +=
+                                `
+                                        <div class="col-12 col-md-4 p-2">
+                                            <div class="card post h-100">
+                                            <a href="/Home/Details/${pizza.id}">
+                                                <img src="${pizza.image}" class="card-img-top" alt="...">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">${pizza.name}</h5>
+                                                    <p class="card-text">${pizza.description}</p>
+                                                </div>
+                                            </a>
+                                            </div>
+                                        </div>
+                                        `;
+                        });
+
+                    } else {
+
+                        document.getElementById('container_no_pizzas').classList.remove('d-none');
+                        document.getElementById('container_pizzas').classList.add('d-none');
+
+
+                    }
+
+                    document.getElementById('spinner-loader').classList.add('d-none');
+                }).catch((error) => {
+                    console.log(error);
+                });
+
+            }
     </script>
 
     }
-
-     <!--   <table class="table">
-
-            <thead>
-                <tr >
-                    <th scope="col" class="col-sm-3 d-none d-sm-table-cell">Foto</th>
-                    <th scope="col" class="col-sm-3 d-none d-sm-table-cell">Nome</th>
-                    <th scope="col" class="col-sm-5 d-none d-sm-table-cell">Descrizione</th>
-                    <th scope="col" class="col-sm-1 d-none d-sm-table-cell">Prezzo</th>
-                  
-                </tr>
-            </thead>
-
-            <tbody>
-
-                <tr style="vertical-align: middle">
-                    <td class="width-img-dim"><img src="~/img/fernando-andrade-_P76trHTWDE-unsplash.jpg" class="img-fluid" alt="Pizza"></td>
-                    <td class="width-txt-dim">Pizza Margherita</td>
-                    <td>Farina bianca, mozzarella, sugo, basilico</td>
-                    <td >4.99 euro</td>
-                </tr>
-
-                <tr style="vertical-align: middle">
-                    <td class="width-img-dim"><img src="~/img/fernando-andrade-_P76trHTWDE-unsplash.jpg" class="img-fluid" alt="Pizza"></td>
-                    <td class="width-txt-dim">Pizza Wusterl</td>
-                    <td>Farina bianca, mozzarella, sugo, wusterl</td>
-                    <td>5.99 euro</td>
-                </tr>
-
-                <tr style="vertical-align: middle">
-                    <td class="width-img-dim"><img src="~/img/fernando-andrade-_P76trHTWDE-unsplash.jpg" class="img-fluid" alt="Pizza"></td>
-                    <td class="width-txt-dim">Pizza Wusterl e Patatine</td>
-                    <td>Farina bianca, mozzarella, sugo, wusterl, patatine fritte</td>
-                    <td>6.99 euro</td>
-                </tr>
-                
-            </tbody>
-
-        </table> -->
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
