--- a/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
+++ b/LaMiaPizzeriaCategoriaETagELogin/Views/Home/Index.cshtml
@@ -13,28 +13,21 @@
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <nav class="navbar bg-light py-3">
 
-            <div class="container-fluid bg-danger">
-            <h3 class="text-white my-3">Da Marione</h3>
-            <div class="arrow-down"></div>
-            </div>
-        </nav>
-
-    <!--
-    <div class="container">
-
-        <h1 class="my-3">Pizzas</h1>
-    </div> -->
 
    <div class="container">
-    <div class="row">
+
+         <div class="row">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center">
                 <h1 class="mt-3 mb-3">Lista pizze</h1>
+                <div>
+                    <input id="input_search" type="text" class="form-control" placeholder="Cerca per titolo..." />
+                </div>
             </div>
         </div>
     </div>
+   
 
         <div id="spinner-loader" class="d-flex justify-content-center">
             <div class="spinner-border mt-5" role="status">
@@ -42,26 +35,13 @@
             </div>
         </div>
 
-
-        <!--REFACTORING CON UTILIZZO DI ID-->
-   <!-- <div class="row js_no_pizza text-center d-none">
-        <div class="col-12">
-            <h3>Non hai inserito alcuna pizza</h3>
-        </div>
-    </div>
-    <div class="row js_pizza_table d-none">
-         qui verranno mostrati gli elementi 
-    </div> -->
-
-
-
-
+           
         <div id="container_no_pizzas" class="row text-center d-none">
               <div class="col-12">
                   <h3>Non hai inserito alcuna pizza</h3>
               </div>
           </div>
-          <div id="container_pizzas"class="row d-none">
+        <div id="container_pizzas" class="row d-none">
                <!--qui verranno mostrati gli elementi -->
           </div>
 
@@ -69,71 +49,19 @@
 </div>
 
 @section Scripts {
-
-    <!-- REFACTORING CON FUNZIONE DI RESEARCH E UTILIZZO DI ID-->
-    <!--
     <script type="text/javascript">
-
-        loadList();
-
-
-        function loadList() {
-
-            axios.get('/api/pizzawebapi').then((res) => {
-
-                console.log('risultato ok', res);
-
-                if (res.data.length == 0) {
-
-                    document.querySelector('.js_no_pizza').classList.remove('d-none');
-                    document.querySelector('.js_pizza_table').classList.add('d-none');
-
-                } else {
-
-                    document.querySelector('.js_pizza_table').classList.remove('d-none');
-                    document.querySelector('.js_no_pizza').classList.add('d-none');
-
-                    document.querySelector('.js_pizza_table').innerHTML = '';
-
-                    res.data.forEach(pizza => {
-
-                        console.log('pizza', pizza);
-
-                        document.querySelector('.js_pizza_table').innerHTML +=
-                            `
-                                   <div class="col-12 col-md-4 p-2">
-                                    <div class="card pizza h-100">
-                                      <img src="${pizza.image}" class="card-img-top" alt="...">
-                                      <div class="card-body">
-                                        <h5 class="card-title">${pizza.name}</h5>
-                                        <p class="card-text">${pizza.description}</p>
-                                      </div>
-                                    </div>
-                                </div>
-                             `;
-                    });
-                }
-            }).catch((error)=>{
-                console.log(error);
-            });
-
-        }
-        -->
-
-        <script type="text/javascript">
-
             loadPizzas();
 
             document.getElementById('input_search').addEventListener('keyup', searchPizzas);
 
             function searchPizzas() {
                 let stringOfResearch = document.getElementById('input_search').value;
-                loadArticoli(stringOfResearch;
+                loadPizzas(stringOfResearch);
             }
 
             function loadPizzas(searchString) {
 
-                axios.get('/api/pizzas', {
+                axios.get('/api/Pizzawebapi', {
                     params: {
                         search: searchString
                     }
@@ -151,7 +79,7 @@
 
                         document.getElementById('container_pizzas').innerHTML = '';
 
-                        res.data.forEach(articolo => {
+                        res.data.forEach(pizza => {
 
                             console.log('pizza: ', pizza);
 
@@ -184,8 +112,93 @@
                     console.log(error);
                 });
 
-            }
+                }
+
     </script>
+
+        <!-- <nav class="navbar bg-light py-3">
+
+                <div class="container-fluid bg-danger">
+                <h3 class="text-white my-3">Da Marione</h3>
+                <div class="arrow-down"></div>
+                </div>
+             </nav>-->
+
+        <!--
+        <div class="container">
+
+            <h1 class="my-3">Pizzas</h1>
+        </div> -->
+        <!--
+        <div class="row">
+            <div class="col-12">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h1 class="mt-3 mb-3">Lista pizze</h1>
+                </div>
+            </div>
+            </div> -->
+
+        <!--REFACTORING CON UTILIZZO DI ID-->
+        <!-- <div class="row js_no_pizza text-center d-none">
+             <div class="col-12">
+                 <h3>Non hai inserito alcuna pizza</h3>
+             </div>
+         </div>
+         <div class="row js_pizza_table d-none">
+              qui verranno mostrati gli elementi
+         </div> -->
+
+        <!-- REFACTORING CON FUNZIONE DI RESEARCH E UTILIZZO DI ID-->
+
+     <!--   <script type="text/javascript">
+
+            loadList();
+
+
+            function loadList() {
+
+                axios.get('/api/pizzawebapi').then((res) => {
+
+
+
+                    console.log('risultato ok', res);
+
+                    if (res.data.length == 0) {
+
+                        document.querySelector('.js_no_pizza').classList.remove('d-none');
+                        document.querySelector('.js_pizza_table').classList.add('d-none');
+
+                    } else {
+
+                        document.querySelector('.js_pizza_table').classList.remove('d-none');
+                        document.querySelector('.js_no_pizza').classList.add('d-none');
+
+                        document.querySelector('.js_pizza_table').innerHTML = '';
+
+                        res.data.forEach(pizza => {
+
+                            console.log('pizza', pizza);
+
+                            document.querySelector('.js_pizza_table').innerHTML +=
+                                `
+                                                   <div class="col-12 col-md-4 p-2">
+                                                    <div class="card pizza h-100">
+                                                      <img src="${pizza.image}" class="card-img-top" alt="...">
+                                                      <div class="card-body">
+                                                        <h5 class="card-title">${pizza.name}</h5>
+                                                        <p class="card-text">${pizza.description}</p>
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                             `;
+                        });
+                    }
+                    document.getElementById('spinner-loader').classList.add('d-none');
+                }).catch((error) => {
+                    console.log(error);
+                });
+
+               } -->
 
     }
 
